# RagOptimisationStudy

./: README.md  main.py  pyproject.toml
knowledge/hybrid-retrieval/: 3-embed.py  5-rerank.py  6-evaluate.py  info.txt  streamlit_app.py  study_pipelines.py
knowledge/hybrid-retrieval/results/: query_level_comparison.csv  rag_pipeline_comparison_metrics.csv  summary_metrics_comparison.csv
knowledge/hybrid-retrieval/utils/: llm.py  reranker.py  retrievers.py
