[project]
name = "my-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25s>=0.3.9",
    "cohere>=6.1.0",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
